@@ -1,5 +1,6 @@
 2.5.4 (20.06.2019):
 
+* Fix bug applying paper whilst setting profile
 * Update to Hungarian translation (thanks to csola)
 
 
